unpackaged/objects/wb_MedicalInsuranceDetail__c.object
<CustomObject>
    <fields>
        <fullName>BaggageCost__c</fullName>
        <label>携行品損害</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContractCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>契約会社</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>医療保険対象</relationshipLabel>
        <relationshipName>CompanyOfMedicalInsurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DamagesCost__c</fullName>
        <label>賠償金額</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiseaseCost__c</fullName>
        <label>疾病治療費用</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiseaseDeathCost__c</fullName>
        <label>疾病死亡</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HandlingBy__c</fullName>
        <label>取扱区分</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WB扱い</fullName>
                </value>
                <value>
                    <fullName>WB以外</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HomeCountryCoverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>一時帰国中担保</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>個人</label>
        <referenceTo>wb_Individual__c</referenceTo>
        <relationshipLabel>医療保険対象</relationshipLabel>
        <relationshipName>IndividualMedicalInsurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InjuryCost__c</fullName>
        <label>傷害治療費用</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InjuryDeathCost__c</fullName>
        <label>傷害死亡・後遺障害</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InsuranceCompany__c</fullName>
        <label>保険会社名称</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>未確認</fullName>
                </value>
                <value>
                    <fullName>保険なし</fullName>
                </value>
                <value>
                    <fullName>AIU保険会社</fullName>
                </value>
                <value>
                    <fullName>JI傷害火災保険株式会社</fullName>
                </value>
                <value>
                    <fullName>東京海上日動火災保険株式会社</fullName>
                </value>
                <value>
                    <fullName>富士火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>日新火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>朝日火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>共栄火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>セゾン自動車火災保険株式会社</fullName>
                </value>
                <value>
                    <fullName>セコム損害保険株式会社</fullName>
                </value>
                <value>
                    <fullName>ニッセイ同和損害保険株式会社</fullName>
                </value>
                <value>
                    <fullName>あいおい損害保険株式会社</fullName>
                </value>
                <value>
                    <fullName>日本興亜損害保険株式会社</fullName>
                </value>
                <value>
                    <fullName>ニッセイ同和損害保険株式会社(JI)</fullName>
                </value>
                <value>
                    <fullName>日立 Health Care Program</fullName>
                </value>
                <value>
                    <fullName>エース損害保険株式会社</fullName>
                </value>
                <value>
                    <fullName>三井住友海上火災保険株式会社</fullName>
                </value>
                <value>
                    <fullName>三井住友海上火災保険（香港)有限公司</fullName>
                </value>
                <value>
                    <fullName>株式会社損害保険ジャパン</fullName>
                </value>
                <value>
                    <fullName>日本財産保険(香港)有限公司</fullName>
                </value>
                <value>
                    <fullName>AIG INSURANCE HONG KONG LTD</fullName>
                </value>
                <value>
                    <fullName>東京海上火災保険（香港）有限公司</fullName>
                </value>
                <value>
                    <fullName>ニュ－インディア保険会社</fullName>
                </value>
                <value>
                    <fullName>平安養老保険</fullName>
                </value>
                <value>
                    <fullName>三井住友海上火災保険公司　上海分公司</fullName>
                </value>
                <value>
                    <fullName>三菱東京UFJ Health Care Program</fullName>
                </value>
                <value>
                    <fullName>長生人寿保険有限公司</fullName>
                </value>
                <value>
                    <fullName>三井住友海上火災有限公司　広州分公司</fullName>
                </value>
                <value>
                    <fullName>日本興亜保険（亜洲）有限公司</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InsuranceCurrency__c</fullName>
        <label>保険通貨</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsuranceEndDate__c</fullName>
        <label>保険満期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InsuranceName__c</fullName>
        <label>保険名称</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsurancePlan__c</fullName>
        <label>保険プラン</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>SB</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>SD</fullName>
                </value>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>DD</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>新A</fullName>
                </value>
                <value>
                    <fullName>新B</fullName>
                </value>
                <value>
                    <fullName>新C</fullName>
                </value>
                <value>
                    <fullName>新D</fullName>
                </value>
                <value>
                    <fullName>新E</fullName>
                </value>
                <value>
                    <fullName>新F</fullName>
                </value>
                <value>
                    <fullName>新G</fullName>
                </value>
                <value>
                    <fullName>新H</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InsuranceStartDate__c</fullName>
        <label>保険始期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <label>保険種類</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>安心生活</fullName>
                </value>
                <value>
                    <fullName>安心NHST</fullName>
                </value>
                <value>
                    <fullName>駐在中国</fullName>
                </value>
                <value>
                    <fullName>チャイナボウル</fullName>
                </value>
                <value>
                    <fullName>優You</fullName>
                </value>
                <value>
                    <fullName>新優You</fullName>
                </value>
                <value>
                    <fullName>Medi-X</fullName>
                </value>
                <value>
                    <fullName>ウェルライフ</fullName>
                </value>
                <value>
                    <fullName>OM-S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MedicalInsurance__c</fullName>
        <label>医療保険</label>
        <referenceTo>wb_MedicalInsurance__c</referenceTo>
        <relationshipLabel>医療保険対象</relationshipLabel>
        <relationshipName>MedicalInsuranceDetail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MedicalSettlement__c</fullName>
        <label>医療費決済方法</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>海外旅行傷害保険</fullName>
                </value>
                <value>
                    <fullName>中国医療傷害保険</fullName>
                </value>
                <value>
                    <fullName>ベトナム医療障害保険</fullName>
                </value>
                <value>
                    <fullName>クレジットカード付帯保険</fullName>
                </value>
                <value>
                    <fullName>現金</fullName>
                </value>
                <value>
                    <fullName>会社積立</fullName>
                </value>
                <value>
                    <fullName>旅行総合保険</fullName>
                </value>
                <value>
                    <fullName>立て替え保証</fullName>
                </value>
                <value>
                    <fullName>Medi-X</fullName>
                </value>
                <value>
                    <fullName>Health Care Program</fullName>
                </value>
                <value>
                    <fullName>未確認</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PolicyAvailability__c</fullName>
        <label>証券入手状況</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>未入手</fullName>
                </value>
                <value>
                    <fullName>入手済み</fullName>
                </value>
                <value>
                    <fullName>取り寄せ中</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PolicyNumber__c</fullName>
        <label>証券番号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>優先順</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>医療備考</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RescueCost__c</fullName>
        <label>救援者費用</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StorageLocation__c</fullName>
        <label>保管場所</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TreatmentCost__c</fullName>
        <label>治療費用</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TreatmentRescueCost__c</fullName>
        <label>治療・救援者費用</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkingCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>勤務会社</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>医療保険対象 (勤務会社)</relationshipLabel>
        <relationshipName>WorkingCompanyOfMedicalInsurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>f_Classification__c</fullName>
        <formula>if(IsNull(Individual__r.f_Classification__c),
Individual__r.Parent__r.f_Classification__c,
Individual__r.f_Classification__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>会員区分</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_ContractCompany__c</fullName>
        <formula>if(IsNull(Individual__r.Member__c),
Individual__r.Parent__r.Member__r.f_ContractCompany__c,
Individual__r.Member__r.f_ContractCompany__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>会員契約会社</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_ContractCountry__c</fullName>
        <formula>if(IsNull(Individual__r.Member__c),
Individual__r.Parent__r.Member__r.f_ContractCountry__c,
Individual__r.Member__r.f_ContractCountry__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>会員契約国</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>old_Id__c</fullName>
        <externalId>true</externalId>
        <label>old_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>医療保険対象</label>
    <nameField>
        <label>医療保険対象番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>